flux/base/lcm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lcm-ingress
  labels:
    app.kubernetes.io/instance: k8s-platform-lcm
    app.kubernetes.io/name: k8s-platform-lcm
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: lcm-service
                port:
                  name: lcm-http
